--- a/index.html
+++ b/index.html
@@ -349,22 +349,18 @@
               <div class="col-md-4 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <a href="#"
+                    <a href="https://0escobarjosue.github.io/portfolio-item-4/"
                       ><div class="hover-effect">
                         <div class="hover-content">
-                          <a
-                            href="https://0escobarjosue.github.io/portfolio-item-1"
-                          >
-                            <h2>Modern Portfolio</h2>
-                            <p>
-                              Click to view
-                            </p>
-                          </a>
+                          <h2>Modern Portfolio</h2>
+                          <p>
+                            Click to view
+                          </p>
                         </div>
                       </div></a
                     >
                     <div class="image">
-                      <img src="img/modern.PNG" />
+                      <img src="img/Modern.png" />
                     </div>
                   </div>
                 </div>
@@ -372,7 +368,7 @@
               <div class="col-md-4 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <a href="https://0escobarjosue.github.io/portfolio-item-2"
+                    <a href="https://0escobarjosue.github.io/portfolio-item-4/"
                       ><div class="hover-effect">
                         <div class="hover-content">
                           <h2>SEO Company</h2>
@@ -383,7 +379,7 @@
                       </div></a
                     >
                     <div class="image">
-                      <img src="img/phone_app.PNG" />
+                      <img src="img/phone_app.png" />
                     </div>
                   </div>
                 </div>
@@ -391,10 +387,10 @@
               <div class="col-md-4 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <a href="https://0escobarjosue.github.io/portfolio-item-3/"
+                    <a href="https://0escobarjosue.github.io/portfolio-item-4/"
                       ><div class="hover-effect">
                         <div class="hover-content">
-                          <h2>Consultation Office</h2>
+                          <h2>Consultation Firm</h2>
                           <p>
                             Click to view
                           </p>
@@ -402,7 +398,7 @@
                       </div></a
                     >
                     <div class="image">
-                      <img src="img/firm_company.PNG" />
+                      <img src="img/firm_company.png" />
                     </div>
                   </div>
                 </div>
