--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                       </div></a
                     >
                     <div class="image">
-                      <img src="img/Modern.png" />
+                      <img src="img/Modern.PNG" />
                     </div>
                   </div>
                 </div>
